<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/top_title" />

    <!-- 提示信息 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/print_result_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/icon_print_success" />

        <TextView
            android:id="@+id/print_result_tv"
            style="@style/tipcontentcolor"
            android:layout_marginTop="5dip"
            android:text="@string/jiaoyichenggong" />
    </LinearLayout>

    <LinearLayout
        style="@style/zizhukaitong_result_linearlayout"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dip" >
        
        <TextView 
            android:id="@+id/print_reason_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="正在打印凭条\n请妥善保管您的发票凭证"/>
        
    </LinearLayout>
    
    <Button 
        android:id="@+id/print_second_btn"
        style="@style/but01_style"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:onClick="printSecondTip"
        android:text="@string/print_second" />

    <Button
        style="@style/but01_style"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:onClick="confirm"
        android:text="@string/confirm" />
    

</LinearLayout>
